<resources>
    <string name="app_name">PostalBear</string>
    <string name="title_activity_location">Map</string>
    <string name="password_hint">**********</string>
    <string name="nic_label">NIC</string>
    <string name="password_label">Password</string>
    <string name="login_label">Login</string>
    <string name="register_label">Register</string>
    <string name="firstname_label">Firstname</string>
    <string name="lastname_label">Lastname</string>
    <string name="address_label">Address</string>
    <string name="create_new_account">Create new account</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="user_role_label">User Role</string>
    <string name="search_label">Search</string>
    <string name="reference_number_label">Reference Number</string>
    <string name="search_by_reference_number_label">Search by reference number</string>
    <string name="sample_text">Sample Text</string>
    <string name="add_edit_post_office_label">Add/ Edit Post Office</string>
    <string name="name_of_the_post_office_label">Name of the Post Office</string>
    <string name="longitude_label">Longitude</string>
    <string name="latitude_label">Latitude</string>
    <string name="add_edit_btn_label">Add/ Edit</string>
    <string name="logo_icon_of_the_application">Logo icon of the application</string>
    <string name="add_post_office_label">Add Post Office</string>
    <string name="edit_post_office">Edit Post Office</string>
    <string name="view_post_office">View Post Office</string>
    <string name="post_office_district_label">District</string>
    <string name="post_office_telephone_label">Telephone</string>
    <string name="add_post_label">Add Post</string>
    <string name="edit_post_label">Edit Post</string>
    <string name="view_post_label">View Post</string>
    <string name="loading">Loading...</string>
    <string name="add_edit_post_label">Add/ Edit Post</string>
    <string name="sender_nic_label">Sender NIC</string>
    <string name="sender_address_label">Sender Address</string>
    <string name="receiver_address_label">Receiver Address</string>
    <string name="distributor_nic_label">Distributor NIC</string>
    <string name="last_post_office_label">Last Post Office</string>
    <string name="next_post_office_label">Next Post Office</string>
    <string name="sample_reference_number">#123456789</string>
    <string name="sample_telephone_number">0XX-XXXXXXX</string>
    <string name="remember_me">Remember Me</string>
    <string name="charges_label">Charges</string>
    <string name="send_date_label">Send Date</string>
    <string name="delivered_label">Delivered</string>
    <string name="sample_date">2021-01-31 (YYYY-MM-DD)</string>
    <string name="edit_btn_label">EDIT</string>
    <string name="pick_a_post_label">Pick a post</string>
    <string name="assign_selected_posts_label">Assign selected posts</string>
    <string-array name="user_roles_array">
        <item>Admin</item>
        <item>Postman</item>
        <item>Customer</item>
    </string-array>
</resources>