<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.AddEditViewPostActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/appbar_item"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@android:color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingHorizontal="15dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="20dp">
                        <TextView
                            android:id="@+id/add_edit_post_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/add_edit_post_label"
                            android:textSize="40sp"
                            android:gravity="center"/>
                    </LinearLayout>
                    <TextView
                        android:id="@+id/reference_number_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reference_number_label"
                        android:textSize="20sp"/>
                    <EditText
                        android:id="@+id/reference_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:inputType="text"
                        tools:ignore="TextFields" />

                    <TextView
                        android:id="@+id/send_date_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/send_date_label"
                        android:textSize="20sp"/>
                    <EditText
                        android:id="@+id/send_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:hint="@string/sample_date"
                        android:inputType="date"
                        tools:ignore="TextFields" />

                    <TextView
                        android:id="@+id/charges_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/charges_label"
                        android:textSize="20sp"/>
                    <EditText
                        android:id="@+id/charges"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:inputType="numberDecimal" />


                    <TextView
                        android:id="@+id/sender_nic_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sender_nic_label"
                        android:textSize="20sp"/>
                    <EditText
                        android:id="@+id/sender_nic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:inputType="text" />

                    <TextView
                        android:id="@+id/sender_address_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sender_address_label"
                        android:textSize="20sp"/>
                    <EditText
                        android:id="@+id/sender_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:inputType="textPostalAddress" />

                    <TextView
                        android:id="@+id/receiver_address_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/receiver_address_label"
                        android:textSize="20sp"/>
                    <EditText
                        android:id="@+id/receiver_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:inputType="textPostalAddress" />

                    <TextView
                        android:id="@+id/distributor_nic_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/distributor_nic_label"
                        android:textSize="20sp"/>
                    <EditText
                        android:id="@+id/distributor_nic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:inputType="text" />

                    <TextView
                        android:id="@+id/last_post_office_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/last_post_office_label"
                        android:textSize="20sp"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/last_post_office_spinner_support"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:enabled="false"
                            android:inputType="text" />
                        <Spinner
                            android:id="@+id/last_post_office_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/next_post_office_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/next_post_office_label"
                        android:textSize="20sp"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/next_post_office_spinner_support"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:enabled="false"
                            android:inputType="text" />
                        <Spinner
                            android:id="@+id/next_post_office_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </RelativeLayout>

                    <CheckBox
                        android:id="@+id/post_delivered"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delivered_label"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="20dp">
                        <Button
                            android:id="@+id/add_edit_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/button_background"
                            android:text="@string/add_edit_btn_label"
                            android:textSize="20sp"
                            android:gravity="center"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</RelativeLayout>