<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.AddEditViewPostOfficeActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/appbar_item"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingHorizontal="15dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="20dp">
                        <TextView
                            android:id="@+id/add_edit_post_office_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/add_edit_post_office_label"
                            android:textSize="30sp"
                            android:gravity="center"/>
                    </LinearLayout>
                    <TextView
                        android:id="@+id/post_office_name_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name_of_the_post_office_label"
                        android:textSize="20sp"/>
                    <EditText
                        android:id="@+id/post_office_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:inputType="text" />

                    <TextView
                        android:id="@+id/post_office_district_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/post_office_district_label"
                        android:textSize="20sp"/>
                    <EditText
                        android:id="@+id/post_office_district"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:inputType="text" />
                    <TextView
                        android:id="@+id/post_office_telephone_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/post_office_telephone_label"
                        android:textSize="20sp"/>
                    <EditText
                        android:id="@+id/post_office_telephone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:maxLength="11"
                        android:hint="@string/sample_telephone_number"
                        android:inputType="text" />

                    <TextView
                        android:id="@+id/longitude_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/longitude_label"
                        android:textSize="20sp"/>
                    <EditText
                        android:id="@+id/longitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:inputType="numberDecimal" />

                    <TextView
                        android:id="@+id/latitude_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/latitude_label"
                        android:textSize="20sp"/>
                    <EditText
                        android:id="@+id/latitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:inputType="numberDecimal" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="20dp">
                        <Button
                            android:id="@+id/add_edit_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/button_background"
                            android:text="@string/add_edit_btn_label"
                            android:textSize="20sp"
                            android:gravity="center"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>