<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity"
    android:background="@android:color/white">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:paddingHorizontal="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="20dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:src="@drawable/srilanka_post"/>
                    <TextView
                        android:id="@+id/register_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/register_label"
                        android:textSize="40sp"
                        android:gravity="center"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/firstname_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/firstname_label"
                    android:textSize="20sp"/>
                <EditText
                    android:id="@+id/firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:inputType="text" />

                <TextView
                    android:id="@+id/lastname_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lastname_label"
                    android:textSize="20sp"/>
                <EditText
                    android:id="@+id/lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:inputType="text" />

                <TextView
                    android:id="@+id/nic_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nic_label"
                    android:textSize="20sp"/>
                <EditText
                    android:id="@+id/nic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:inputType="text" />

                <TextView
                    android:id="@+id/address_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address_label"
                    android:textSize="20sp"/>
                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:inputType="text" />

                <TextView
                    android:id="@+id/user_role_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_role_label"
                    android:textSize="20sp"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/user_role_spinner_support"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:enabled="false"
                        android:inputType="text" />
                    <Spinner
                        android:id="@+id/user_role_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </RelativeLayout>
                <TextView
                    android:id="@+id/password_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password_label"
                    android:textSize="20sp"/>
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:autofillHints=""
                    android:inputType="textPassword" />
                <TextView
                    android:id="@+id/confirm_password_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_password_label"
                    android:textSize="20sp"/>
                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:autofillHints=""
                    android:inputType="textPassword" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="20dp">
                    <Button
                        android:id="@+id/register_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_background"
                        android:text="@string/register_label"
                        android:textSize="20sp"
                        android:gravity="center"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>